force-app/main/default/objects/Key_Opinion_Leader_Data__c/Key_Opinion_Leader_Data__c.object-meta.xml
<CustomObject>
    <label>Key Opinion Leader Data</label>
    <nameField>
        <label>Key Opinion Leader Data Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Key Opinion Leader Data</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>