force-app/main/default/objects/Key_Opinion_Leader_Data__c/fields/KOL__c.field-meta.xml
<CustomField>
    <fullName>KOL__c</fullName>
    <description>OpenQ related KOL</description>
    <defaultValue>false</defaultValue>
    <label>KOL</label>
    <type>Checkbox</type>
</CustomField>