force-app/main/default/objects/Key_Opinion_Leader_Data__c/fields/Last_Interaction_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Interaction_Date__c</fullName>
    <description>OpenQ KOL last interaction date</description>
    <label>Last Interaction Date</label>
    <type>Date</type>
</CustomField>