force-app/main/default/objects/Key_Opinion_Leader_Data__c/fields/Last_Interaction_Name__c.field-meta.xml
<CustomField>
    <fullName>Last_Interaction_Name__c</fullName>
    <description>OpenQ KOL last interaction name</description>
    <label>Last Interaction Name</label>
    <type>TextArea</type>
</CustomField>