force-app/main/default/objects/Key_Opinion_Leader_Data__c/fields/Last_Interaction_Type__c.field-meta.xml
<CustomField>
    <fullName>Last_Interaction_Type__c</fullName>
    <description>OpenQ KOL last interaction type</description>
    <label>Last Interaction Type</label>
    <type>TextArea</type>
</CustomField>