force-app/main/default/objects/Key_Opinion_Leader_Data__c/fields/MainLMNContact__c.field-meta.xml
<CustomField>
    <fullName>MainLMNContact__c</fullName>
    <description>OpenQ KOL contact</description>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Key Opinion Leaders Data</relationshipLabel>
    <relationshipName>KeyOpinionLeadersData</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>